--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ Keras-Preprocessing==1.1.2
 lockfile==0.12.2
 Markdown==3.3.3
 msgpack==0.6.2
-numpy==1.20.0
+numpy
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.3
